Update and rename 0-init.yml to 0-prep.yml

--- a/0-prep.yml
+++ b/0-prep.yml
@@ -30,3 +30,5 @@
       dest: /etc/fstab
       state: absent
       regexp: 'swap'
+  - name: 7. reboot to take effect/need to modify
+    command: reboot
